--- a/index.html
+++ b/index.html
@@ -208,8 +208,9 @@
         <div class="animal-icons">
             <img src="https://img.icons8.com/color/96/000000/lion.png" alt="Lion">
             <img src="https://img.icons8.com/color/96/000000/elephant.png" alt="Elephant">
-            <img src="https://img.icons8.com/color/96/000000/monkey.png" alt="Monkey">
+            <img src="https://img.icons8.com/emoji/96/monkey.png" alt="Monkey">
         </div>
+        
     </div>
 
     <script>
