--- a/index.html
+++ b/index.html
@@ -72,16 +72,7 @@
     </div>
 
     <!-- Main Content -->
-    <div class="welcome-section">
-        <h1>Welcome to KiddoLearn! 🎉</h1>
-        <p>Where Learning Meets Fun! 🌈</p>
-        <div class="animal-icons">
-            <img src="https://img.icons8.com/color/96/000000/lion.png" alt="Lion">
-            <img src="https://img.icons8.com/color/96/000000/elephant.png" alt="Elephant">
-            <img src="https://img.icons8.com/emoji/96/monkey.png" alt="Monkey">
-        </div>
-        
-    </div>
+    <img src="D:\githubdemo\Learning_platfrom\img0/h1.jpg" class="img-fluid" alt="Responsive image">
 
     <script>
         // Login Modal Functions
